aws/cloudformation/ecs-base.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'ECS base resources for Blue/Green deployment'

Parameters:
  ProjectName:
    Type: String
    Default: 'ecs-bg-deploy'
  ImageTag:
    Type: String
    Default: 'latest'

Resources:
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub '${ProjectName}-cluster'

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub '${ProjectName}-task'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: !Ref TaskExecutionRole
      ContainerDefinitions:
        - Name: app
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ProjectName}-app:${ImageTag}'
          PortMappings:
            - ContainerPort: 80
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub '/ecs/${ProjectName}'
      RetentionInDays: 7

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB
      VpcId: !ImportValue
        Fn::Sub: '${ProjectName}-VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECS tasks
      VpcId: !ImportValue
        Fn::Sub: '${ProjectName}-VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub '${ProjectName}-alb'
      Scheme: internet-facing
      Type: application
      Subnets: !Split
        - ','
        - !ImportValue
          Fn::Sub: '${ProjectName}-PublicSubnets'
      SecurityGroups:
        - !Ref ALBSecurityGroup

  TargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub '${ProjectName}-tg-1'
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !ImportValue
        Fn::Sub: '${ProjectName}-VPC'
      HealthCheckPath: /

  TargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub '${ProjectName}-tg-2'
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !ImportValue
        Fn::Sub: '${ProjectName}-VPC'
      HealthCheckPath: /

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup1
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ECSService:
    Type: AWS::ECS::Service
    DependsOn: ALBListener
    Properties:
      ServiceName: !Sub '${ProjectName}-service'
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinition
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets: !Split
            - ','
            - !ImportValue
              Fn::Sub: '${ProjectName}-PrivateSubnets'
      LoadBalancers:
        - ContainerName: app
          ContainerPort: 80
          TargetGroupArn: !Ref TargetGroup1
      DeploymentController:
        Type: CODE_DEPLOY

Outputs:
  ECSCluster:
    Value: !Ref ECSCluster
    Export:
      Name: !Sub '${ProjectName}-ECSCluster'
  ECSService:
    Value: !Ref ECSService
    Export:
      Name: !Sub '${ProjectName}-ECSService'
  TargetGroup1:
    Value: !GetAtt TargetGroup1.TargetGroupName
    Export:
      Name: !Sub '${ProjectName}-TargetGroup1'
  TargetGroup2:
    Value: !GetAtt TargetGroup2.TargetGroupName
    Export:
      Name: !Sub '${ProjectName}-TargetGroup2'
  ALBListener:
    Value: !Ref ALBListener
    Export:
      Name: !Sub '${ProjectName}-ALBListener'
